that didnt fix it, so uh, just moving on til i get to everytying else...added line spacing and removed mx height from img

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
   display: inline-block;
   white-space: normal;
   vertical-align: middle;
+  line-height: 5px;
 }
 
 #bios h1{
@@ -30,8 +31,7 @@ img {
 	display: inline-block;
 	margin-left: 40px;
 	border: 2px solid black; 
-	margin-right: 40px; 
-	max-height: 500px; 
+	margin-right: 40px;
 	max-width: 500px; 
 	/*float: left; maybe not needed*/ 
 }
